# gr-AlteraSocSDR

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: AlteraSocSDRConfig.cmake  FindAT86RF215_Suite.cmake
docs/: README.AlteraSocSDR
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: AlteraSocSDR_altera_socfpga_fir_accelerator.xml  AlteraSocSDR_altera_socfpga_fir_decim_accelerator.xml  AlteraSocSDR_altera_socfpga_fir_interp_accelerator.xml  AlteraSocSDR_altera_socfpga_sdr_sink_complex.xml  AlteraSocSDR_altera_socfpga_sdr_source_complex.xml  CMakeLists.txt
include/AlteraSocSDR/: CMakeLists.txt  altera_socfpga_fir_accelerator.h  altera_socfpga_fir_decim_accelerator.h  altera_socfpga_fir_interp_accelerator.h  altera_socfpga_sdr_sink_complex.h  altera_socfpga_sdr_source_complex.h  api.h  gr_storage.h
lib/: CMakeLists.txt  altera_msgdma_ioctl.h  altera_socfpga_fir_accelerator_impl.cc  altera_socfpga_fir_accelerator_impl.h  altera_socfpga_fir_decim_accelerator_impl.cc  altera_socfpga_fir_decim_accelerator_impl.h  altera_socfpga_fir_interp_accelerator_impl.cc  altera_socfpga_fir_interp_accelerator_impl.h  altera_socfpga_sdr_sink_complex_impl.cc  altera_socfpga_sdr_sink_complex_impl.h  altera_socfpga_sdr_source_complex_impl.cc  altera_socfpga_sdr_source_complex_impl.h  fifo_buffer.cc  fifo_buffer.h  qa_AlteraSocSDR.cc  qa_AlteraSocSDR.h  test_AlteraSocSDR.cc
python/: CMakeLists.txt  __init__.py
swig/: AlteraSocSDR_swig.i  CMakeLists.txt
